Made sure window is 100% of screen so there is no scrollbar by adjusting margins and padding etc. Added basic (buggy) ability to save a searched/selected location which turns it into a clickable button.

--- a/index.css
+++ b/index.css
@@ -15,21 +15,26 @@ html, body {
 
 /* Page Title: Path Finder */
 h1 {
-  text-align:center;
-  height: 30px;
-  margin: 2;
-  padding: 4px;
+  text-align: center;
+  font-family: 'Roboto', Arial, sans-serif;
+  height: 40px;
+  padding: 20px 0px;
+  margin: 0;
 }
 
 /* Map customisations */
 #map-container{
-  height: -webkit-calc(100% - 60px);
-  height:    -moz-calc(100% - 60px);
-  height:         calc(100% - 60px);
+  height: -webkit-calc(100% - 80px);
+  height:    -moz-calc(100% - 80px);
+  height:         calc(100% - 80px);
+  margin: 0;
+  padding: 0;
 }
 
 #map{
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 #description {
@@ -86,7 +91,7 @@ h1 {
   font-weight: 300;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  margin-top: 25px;
+  margin-top: 20px;
   width: 200px;
   height: 40px;
 }
@@ -120,7 +125,7 @@ h1 {
   width: 6em;
   height: 50px;
   position: absolute;
-  top: 15px;
+  top: 10px;
   left: 10px;
 }
 
@@ -161,12 +166,12 @@ h1 {
   box-shadow: 0 3px 8px #aaa, inset 0 2px 3px #fff;
   color: #000000;
   display: block;
-  font-family: 'Poiret One', cursive;
+  font-family: 'Roboto', Arial, sans-serif;
   font-size: 35px;
   line-height: 58px;
   text-decoration: none;
   margin-right: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 0px;
   position: relative;
   width: 60px;
   height: 60px;
